--- a/Laboratorio1/Laboratorio1/Views/Home/About.cshtml
+++ b/Laboratorio1/Laboratorio1/Views/Home/About.cshtml
@@ -1,9 +1,32 @@
 ﻿@{
     ViewBag.Title = "About";
+    String nombreAutor = "Felipe Bianchini";
+    int nota = 100;
 }
-<main aria-labelledby="title">
-    <h2 id="title">@ViewBag.Title.</h2>
-    <h3>@ViewBag.Message</h3>
 
-    <p>Use this area to provide additional information.</p>
-</main>
+<html>
+    <head>
+        <title> @ViewBag.Title </title>
+    </head>
+    <body>
+        <div>
+            <h1>Mi primera vista</h1>
+            <h2>¡Hola Mundo!</h2>
+            <p>
+                <strong>Yo soy: </strong>@nombreAutor<br/>
+                Mi nota el día de hoy es: <input type="number" value="@nota" placeholder="Escriba su nota" />
+            </p>
+            <hr/>
+        </div>
+
+        <div>
+            <label>Caja para texto:</label>
+            <input type="text" placeholder="Escriba cualquier cosa" />
+            <hr/>
+        </div>
+
+        <div>
+            <a class="btn btn-info" href"/Home/Index"> Volver a la página de inicio</a><br/>
+        </div>
+    </body>
+</html>
