--- a/Laboratorio1/Laboratorio1/Views/Home/About.cshtml
+++ b/Laboratorio1/Laboratorio1/Views/Home/About.cshtml
@@ -18,7 +18,11 @@
             </p>
             <hr/>
         </div>
-
+        <div>
+            <label>El equipo de PI del que soy parte se llama:</label>
+            <input type="text" placeholder="Nombre" />
+            <hr />
+        </div>
         <div>
             <label>Caja para texto:</label>
             <input type="text" placeholder="Escriba cualquier cosa" />
